...
    <string name="command_write">write</string>
    <string name="command_save">save</string>
    <string name="send_command">Send command</string>
    <string name="load_device_info_action">Load device info</string>
    <string name="load_battery_info_action">Load battery info</string>
    <string name="load_memory_usage_action">Memory usage</string>
    <string name="ack_beep_on_action">Ack Beep On</string>
    <string name="ack_beep_off_action">Ack Beep Off</string>
    <string name="vibrate_on_action">Vibrate On</string>
    <string name="vibrate_off_action">Vibrate Off</string>
    <string name="device_info_loaded">Device info loaded</string>
    <string name="model_config_applied_after_refresh">Applied model-based module config after version+battery refresh: %1$s</string>
    <string name="version_parsed">Version parsed</string>
...
